@@ -1,4 +1,6 @@
 DIST fsharp-3.0.27.tar.gz 13144822 SHA256 3f088407fb0921fd60257a4b27dc32892e2e2b7eed70190f8961551477fac591 SHA512 a80dfee08a3bc60859458374677adf48f84e6b56457a51b6930b62ba27e3117c5078d2b4ca27d4f7ddf215b48de3fad897a577057aeffc1f6a98d638e512e7cf WHIRLPOOL f3ad01dd04942d156d6999a1c97a85c6cea14db90d50a14f9eb24563fa32b18ff0a64ac9a10e556f6b99a1822679627c3bca45bc2e86466e7acda3e0dd16e322
+DIST fsharp-3.0.28.tar.gz 13146911 SHA256 951e43ea0bbd04d3990500c6564d002395df26c165269abd24a87b5eea8313c7 SHA512 4682d6df039aac1bf8ea2857b81705a37e1ba7a941d73882e2b4f3af129f1b8fdc7f2db326612c89c48b3eb0dd98213225a2d10a93b06c66a36b7f11c7b35dc6 WHIRLPOOL 3592a73ea2ec0f5db7b9b75a4dcc104314c5b5895724a4f681644d9ef5b0acd9e66ca602448d631aec9437b534a85bf3656772238754baf33fde121917e08e00
 EBUILD fsharp-3.0.27.ebuild 693 SHA256 4cd6bffed42a94fb61366acc547fbbf33645a12d5a7af694d4ae2b338044c33e SHA512 bb39dd0d378efda36986c77998977ad85d26c0585428d5c479a3150e0a0e48e3d5c14900df061bc291f87c5791ed4881a299fc9c679a6a0a7a4f239204fc5332 WHIRLPOOL 30a69a7aebde8c59c1e1e73bcfeb94358e58dee3f4769d2d2dcf9ffaa50f0a702df20f7a1f0ca726eb0ec037f40b6beef3b48e7d4581f77aaa2fc9089b409447
-MISC ChangeLog 465 SHA256 5564694c995957eb845edbb2e1e084e1c7cb003639dd5e1bfb1c0cf76a866877 SHA512 ae35e0c93e7d4dcf6baf8e12f5dab27cd861c3a4384405bf4578aed2484c576358434e2ea1f4ba6a7dd329380fff1bb22af95b3d7e5c22538488817cf020af98 WHIRLPOOL 0be5f374942f23fb932502add95ede1b5fb277dd98d8c6c9081a441c5255d3be3884a19269879b4b5f71b2df8cbefddab9cedc1cfb1d94ff49971bc45edd3e7f
+EBUILD fsharp-3.0.28.ebuild 693 SHA256 04295be8ca8d8b520516893feabce6995312ed322149bfce462acca72ec0c616 SHA512 88b41d72e4959eea84dff7e39015f7ef569c5b9de96948448b1afd5d7473cca7f5647cbaf2f5c7b282d9e35cfe5863e79b55d1cc97869393ad5bef023feec5ee WHIRLPOOL dad0ea971c07571f6a4bc5cac0d8647eea3f3109a79ecb32bff1075f17cf4dc9fdeefdd122ed5f249c632b654c67dea66921198ffb0c986a3af388af69b53f66
+MISC ChangeLog 583 SHA256 eae549a5786b7826b3883540830b6453fe70034dd4c5e2653130710cf3500416 SHA512 5abe8e1f4e662de682f97e82fa916e00445ce9f11fe9c6dcabde6f157f02309ecada28c0f9f1d1a10216deb18c906a32852db8e9faa8a5fda7a9ed644f7b38a8 WHIRLPOOL 43000cd48d4625e3006de3b46b668496c276fa841ea6010f086c6b584ad4508cd844177ab01ab3808fd78ebf5b416cee2e50552eb0be1170d23ad67c7873b50f
 MISC metadata.xml 406 SHA256 0d604890ae200ce5f6e0a82dccf404a158f568035f0a7ad59d87088ad6bd05f7 SHA512 c2679f728a7260b5d74a1fa1abe99a16d074fe0316e57c061dda4f718bc6157387c3e10054bbd8c334d62b5e1c497fd20a55664f0e39f868e03deb7eeb920604 WHIRLPOOL 5f910211f1d4514f29895f0848a67522566691c9be40254c9f792b69209c3bb7c406e8cbb1174b6693de35710f612f8a6047c1a86837c4e240ff23298badcde3
