@@ -8,19 +8,19 @@ DIST git-annex-4.20130815.tar.gz 6408230 SHA256 e144cf60ccdfc588e71798141f38ce9e
 EBUILD git-annex-3.20111203-r1.ebuild 1450 SHA256 554cea476b133269c141993da1145175539decf0b37247927e2fabb68a14e142 SHA512 aa522d55cf70982fc5693496d6b1853e6917aa089ecb2f9926a37ffb750ec89b56fa47c3d68cdadd7a5cf7807214d5b78718ce9a340dc863e3e3e402b823027e WHIRLPOOL 5213d9f259a6613f7a958df88c882daa86aaa249ceb07f370b768a1354443930cc3c27a2220d8df2d4256406e69c8a652f7a735765e16336575e1e86626fd5a0
 EBUILD git-annex-3.20120605.ebuild 1933 SHA256 5186162cae1ce3dfda0da0939fad64ef521e08b17dfd231b4a89f79100544650 SHA512 a9269ad72e99df9537261edacf63bdfc32664bd354bc25307ad51ab77073de34bf95fc148d3bce9a28a2b7897fee2eebc6a471d71c9e26069545691128714a31 WHIRLPOOL b90b32fd692dcb77890d20af517a115b184de367425c5de7ec43bdaa3698ad1662af5b3ba5989caf3b02943acbeae12ecc0d1b27b1352e4cfe46e3d65aae4231
 EBUILD git-annex-3.20121211-r2.ebuild 2796 SHA256 ec1ee68bf3ea711322acf89194f4eb2ad0f2702ab38fb696e7061745baa2481d SHA512 1a09fb926a8ac966e6b0d9010a5bb6db9c5d0197dd04fbce0e83f74d2fbbfa35737f438c1e3b956c6905b44cc50f302b7688d0d062078c42e097491c6c53ef94 WHIRLPOOL 14624b94558bffa5a1ed27ffa3b859b1254a20bd07e99b02cbc65a9b6c29948b5a57b147971cae50c0cd1ad6da39569b57dce4d0461db7028d4f4255e537bca0
-EBUILD git-annex-4.20130815.ebuild 3542 SHA256 d874b409c8e172b52f1e4954cb689043350bb916e614317c2fe0020f38424421 SHA512 455bc1e23565d99450a80314979c0408b6851a6a0d254ae32a083d043762547d258c50171d431542b84f63f71be2f4cf760149f5eac916c543d1655373c37ee9 WHIRLPOOL 45cc7eb0198765498f682eb0392b5fa5aa045f9a0048bc6e543e095be07c0dd15bb7bc27614b7ef08eadee45418fed2abbd2a27bcb3721c16c1d94d6c38fd729
-MISC ChangeLog 3125 SHA256 b6b4ee8fcd3494e3c612ba1f50448cff74ba25cdc47e36e02deb75817fc6162e SHA512 bff8f3c3b38987be2929e75c2fb4ec3ba1fc99705af58f8269c799f66fe18c7a86f6a8f5fa3bdc5013e6cbaf0fc86989db01b0f48a962cccebc967b221a100af WHIRLPOOL 446c16f89ef6680cc37a58c05e3b9fe72cefbcea83e6d798dfb00aa6f20ce23fd8e9f6aa21fce7cc9f93dea28ece472f21befafbde0813cf3102d8bf8a488ce2
+EBUILD git-annex-4.20130815-r1.ebuild 3462 SHA256 5060ffc816b98bc1a7e5a9464e2bf24aaafd098be3b5b9c8122b1e7087bc6337 SHA512 667095eed3671a78056b626756d31988c5b364b11d1f0f8a29f7298637fb2da83fff732cc40761a2653a40c6450aa459c2771960de467ba1d8f4efa45635297b WHIRLPOOL a703b1797bbe5d96617439a0dbf791e6774bb19030a889330d5262bc4f8da0aa47816f690553ef1005d32e950adf963b7e909efba64602cf1e060f5582024f51
+MISC ChangeLog 3320 SHA256 8ac97cb005f447b126ecff0ed547aa256be8226bc053d9b4cacbfdf97165f730 SHA512 0023c6a7a4f83215111b1e96d23326d6cb3fb27aa7d224c889f69d4a3495a1d13d1c184cafb3749d66b01d301ef749a4507b9887a0fc583c34d30583a3ffe7fe WHIRLPOOL 2a3d343a6aee05ca65b1e68210e4916cb8b94b031658da1e50b54fc3669c324cfea609d1d1196ff5395d8e2917d68acad248dc9101585c2b44aec9d62f480439
 MISC metadata.xml 1725 SHA256 0204c097937e6b50bcecc025ad1a8ddacb2aea287e4d20e97722b939b62deda3 SHA512 6db22da5fc9b0804e6752cfca19edaa70a220e94f677955ce6a954b87cf37ffd49e02f01b7fa86640ae0461c15daf70732be3880b828be5c258a0e07f67c5127 WHIRLPOOL 134537d77877445624fa5a4b3b74d97fec66a784aea876bdcdd200f825da38fb2f0ab200bfcc56eec9b60b445186e9798587cf994deb257403faab38088593a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQF8BAEBCABmBQJSHkIVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQF8BAEBCABmBQJSR8DTXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwMTlGQTEwRTVCMUJCNjdFRDM5Qzg3RjdF
-QUQ1MEQ2NEQ4RDM1NzFBAAoJEOrVDWTY01caBqwH/RvMu0Uw9A5WLzSCyvcYfepz
-hSQArLfGoe5AquVzjGllIpJ1mYRc1pLROojiusFXN1aQDtfvK/v1nUSjaGBXPyNM
-c0dnKhWy+HqgNnijAo/8Zs+Kl6tGx3+wBq4pcFHgDXzQKxNzA9T8UaYTh0V5laV1
-XKg94J6wFEejqLHmYLJGc3IBRRJ0LhtnIHiOMlJ0e3gH96DPbmzpqU4ZTEkMdtII
-YmFUkJ4LLN0fDavAmjwjYsvwUzIvF6YVy9BlZykFEzl8dqVTQfEHMADnHRjwYNCs
-NmESrpoKZ1EvOkAtm/wnsqg52LinZZqJ5EEHpv9K/y6YjPLzAEPs33w63VMcZaE=
-=EBJW
+QUQ1MEQ2NEQ4RDM1NzFBAAoJEOrVDWTY01caTBAH/2GaRomWIDtqwutFwhCN/u+w
+uBuIx/OCOc72TycJX/GMNEacU+CxhrkYmqVkvmCcyoRqYpBPzCkEucGtR6oc30oD
+aHeIY52ce/C9HfOhxADHU3fnxkuVoTwEmNKZlaYV3oO068S6lyokFCsdGDdodkK7
+y0RXujlbWfPhKs69zWjzdo6HKPsT595Z6ZvYV+4NgLpcMaaVKRvApNPlH21jqnRv
+az6VOq1qOw8h3ponob9wKPj/cdQKPglHRBOuZVVSfJYtRM+mpK5ez5H2UndauS/1
+HJILXdmIQmgj+e/dp6admXTFNeJMXxolm+loqpFAlFECIpTlAH9nmS1Fz3L/hck=
+=WM1e
 -----END PGP SIGNATURE-----
