@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=dev-lang/mono || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=The F# Compiler
+EAPI=5
+HOMEPAGE=https://github.com/fsharp/fsharp
+KEYWORDS=~x86 ~amd64
+LICENSE=Apache-2.0
+RDEPEND=dev-lang/mono
+SLOT=0
+SRC_URI=https://github.com/fsharp/fsharp/archive/3.0.28.tar.gz -> fsharp-3.0.28.tar.gz
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	0954dce983a8c7cfe4e2b55263cb7a05	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	mono-env	59ca1177366cc9e14521d3501e9bb281	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=f20eef9b49f9ccb1ee5349ba6c517596
