@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prerm setup test
-DEPEND=>=dev-vcs/git-1.7.7 assistant? ( sys-process/lsof ) dev-haskell/bloomfilter >=dev-haskell/cabal-1.8 dev-haskell/dataenc dev-haskell/dlist dev-haskell/edit-distance dev-haskell/extensible-exceptions dev-haskell/hslogger dev-haskell/http dev-haskell/ifelse dev-haskell/json[generic] dev-haskell/missingh dev-haskell/monad-control dev-haskell/monadcatchio-transformers >=dev-haskell/mtl-2 >=dev-haskell/network-2.0 >=dev-haskell/quickcheck-2.1 dev-haskell/random dev-haskell/safesemaphore dev-haskell/sha dev-haskell/text dev-haskell/unix-compat dev-haskell/utf8-string dev-haskell/uuid >=dev-lang/ghc-7.4.1 android? ( dev-haskell/data-endian ) assistant? ( dev-haskell/async >=dev-haskell/stm-2.3 inotify? ( dev-haskell/hinotify ) ) dbus? ( >=dev-haskell/dbus-0.10.3 ) dns? ( dev-haskell/dns ) feed? ( dev-haskell/feed ) pairing? ( dev-haskell/network-info dev-haskell/network-multicast ) s3? ( dev-haskell/hs3 ) tdfa? ( dev-haskell/regex-tdfa ) testsuite? ( dev-haskell/hunit ) webapp? ( dev-haskell/aeson dev-haskell/blaze-builder dev-haskell/case-insensitive dev-haskell/clientsession dev-haskell/crypto-api dev-haskell/data-default dev-haskell/hamlet dev-haskell/transformers dev-haskell/wai dev-haskell/wai-logger dev-haskell/warp dev-haskell/yesod dev-haskell/yesod-core dev-haskell/yesod-default dev-haskell/yesod-form dev-haskell/yesod-static s3? ( !webdav? ( dev-haskell/http-types ) ) ) webdav? ( >=dev-haskell/dav-0.3 dev-haskell/http-conduit dev-haskell/xml-conduit ) xmpp? ( >=dev-haskell/gnutls-0.1.4 dev-haskell/network-protocol-xmpp dev-haskell/xml-types ) >=dev-haskell/cabal-1.1.4
-DESCRIPTION=manage files with git, without checking their contents into git
-EAPI=5
-HOMEPAGE=http://git-annex.branchable.com/
-IUSE=android +assistant +dbus +dns doc +feed +inotify +pairing +production +s3 +tdfa +testsuite +webapp +webdav +xmpp
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-3
-RDEPEND=>=dev-vcs/git-1.7.7 assistant? ( sys-process/lsof )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://hackage/packages/archive/git-annex/4.20130815/git-annex-4.20130815.tar.gz
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	ghc-package	2d57c65a8826a1c4234d2de7f1b9f486	haskell-cabal	48f0813cd6c66200944782b078f0a188	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=2a5b4644c4aba14252ce417cbd9079f9
