@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86 ~ppc
 LICENSE=GPL-2 LGPL-2
 RDEPEND=!dev-util/gdbserver >=sys-libs/ncurses-5.2-r2 sys-libs/readline expat? ( dev-libs/expat ) python? ( =dev-lang/python-2* ) zlib? ( sys-libs/zlib )
 SLOT=0
-SRC_URI=mirror://gnu/gdb/gdb-7.6.1.tar.bz2 ftp://sourceware.org/pub/gdb/releases/gdb-7.6.1.tar.bz2 mirror://gentoo/gdb-7.6.1-patches-1.tar.xz
+SRC_URI=mirror://gnu/gdb/gdb-7.6.1.tar.bz2 ftp://sourceware.org/pub/gdb/releases/gdb-7.6.1.tar.bz2 mirror://gentoo/gdb-7.6.1-patches-2.tar.xz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	2ff578fb151da221e1797f12e2990e72	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6d1ac2449877037f3032435765612db1
+_md5_=a1e91aafccfc01b806129e9a17858eb1
