@@ -28,7 +28,7 @@ DIST gdb-7.5.1-patches-2.tar.xz 8720 SHA256 7b93f737eb90c981685b6eab8ab7cda7ee0a
 DIST gdb-7.5.1.tar.bz2 21349391 SHA256 070b808d289fa8f0291738eeaccc0cd7700d476998781f572856155240d29d20 SHA512 23b240f0ca9376dfc2fdeb79e725a3784841d1f787db9f7ca62a5e2f824ddd8b2d5fb3450e19dd8fee79589e3b0a5fe638eaa35966363c78c82711731c26dc47 WHIRLPOOL b1bb3d5133efcdd3e842ba03bf2f8ebcd01f4cbda8333a6725cd4160604b592fb991c02c17b725ffbcea0b7e37de9ade380079d903541124b4b76fcbd5f9e754
 DIST gdb-7.5.tar.bz2 21327195 SHA256 d178c45c328369ae4f24f9a0ec53b7d009e2bfa1d41b7027280b24f58ae61932 SHA512 fcedba8a8ba50470e8c032801e99a43dae7fcaf7885b55beaf2d47bfb7b0b666cb5e3bb40d0b67e9a3ba50bd88faba0a255474ab38c2a0272e880d5c668e0506 WHIRLPOOL fa2d238380508cfe8c1ca9a0906e87d539b0470230da407c5c6a02cd9f2b63c727586a9651943ee9328bb44d782a66bb9fae7dd27e9bd31fd5cbd0161cc3514d
 DIST gdb-7.6-patches-3.tar.xz 13644 SHA256 5ec83531a6bab75d9e3a67431d724b936cadb06862810b3182ac13f8d9b0cd22 SHA512 23a6e597629ecc544f8646eda5a637752b04cb5ecb7797f88d342e0c38f0680419a3656d8718722e8eeb7165e9aa7696c2e5b889049e5b405415bb7c391fa350 WHIRLPOOL 5a9f5cc513768c3218353ee74605ae224d556a72b557763370cc059e75fc31d438b57521df2e9d8eb5d713bbfb8d308d6b2cdf7dbdb7838343b12afc9d81e619
-DIST gdb-7.6.1-patches-1.tar.xz 13644 SHA256 f8e7f148f34a6edb85b3827b45008d60d400f56651079e889dbbb2ed757d56fe SHA512 a7d6c8197a963de513571c19b5dfd9bea1fee68700c3395c2df2df401e86e250f8fcd509953f5ab13c1e98e75fe1d85c3e9a78031065eb9b10134da48189990a WHIRLPOOL e763032524b359a25011561798d391b39b42bac616a784cbf85038c97ee392f4a918ed7371b27a281ea968b07f4bca7c78837934d161c4a39108f151c6550cd0
+DIST gdb-7.6.1-patches-2.tar.xz 14136 SHA256 327948403616d1376cca2bfb0ff174b93bf0494390708864ef54bdd98bc4729f SHA512 f1364d5cc70ea3c131e48ec5cc7275bcf0f875b0dcbe663f507b0f5d082e7db38636fd9036db3da7b2e9794dbc7d42b24126d91fde9447f6f10fcc8b3aea7817 WHIRLPOOL aa738854e26da8469ae98fb681552a7f25777809027761bb788a42db73bfd7852a09e82a8bacb2870ffc52a5953bc398adc4e098c6d36f331cd23a9a9a75c6ed
 DIST gdb-7.6.1.tar.bz2 24338919 SHA256 e3dfa38a14a5457f9b8b26f7b5080ba5491bd10ae4d69bfe357cea87b7d162e4 SHA512 ca42f003073d35cde42b43efe12f42888b39f2fc4b55f7df9faca2c8381a9329f19bf9366fff0af3ae59711aafaf9b4a33a15cb73a531c0c046b8ada98ed774b WHIRLPOOL 0489854f52e5d3e8fa36f4deb629e9aa7e83fd0ce80fe9aef6a9284e348e52e5d71e655d403a856911b868891ee2ba07bacc707326ef68d68052b557d5aef963
 DIST gdb-7.6.tar.bz2 24333590 SHA256 a410e8f35ee70cce83dbbf1da9e2a8373f271ac0e4b71db4336ae293fc7bdf1b SHA512 3b4f7f25ab8a8014a339966fd165dac6ac63df7d6403c338bbd38737bc0033d7e6461cdea2cd6dd095335a9d2a0ecd9d694e862b8d54d269dae577402e2b3ffe WHIRLPOOL c519955a9b6246e90b979783e5745e49de36b6fcd5b17360ae8db92283efb63117a592a03b92e173a11f986dfcc587e2d5c26f3aea49634f317f554ffe2f0e72
 EBUILD gdb-6.6-r2.ebuild 1948 SHA256 e32a884423df64a81c05033f0a48ad26d9015cc3cc5834e4ea1a7f406156b4c5 SHA512 e9e701cd991d20a9a680eb93939a14ac8c34dec4ebad714d3272f1b14e63dfd90c4f516ff488ad8f6193bb3f5195edc8f097c6f420ceacb17c13b02b9de16230 WHIRLPOOL 087d7651b75c90783ba540b1a4d27bd43cb4abf642ade3bd2fd21c1c234c8d29eb2c5f93ae37ff067bd45a1cbabd4a7ce7c00090476bfc2e5e8bf6810a018ded
@@ -46,15 +46,25 @@ EBUILD gdb-7.4.1.ebuild 5221 SHA256 9023833ab8820e115943c39b0692e253ed805acd98b1
 EBUILD gdb-7.4.ebuild 5207 SHA256 fbcd9929e8a16b34d640fc970b788bbd10c18d00fd0a731198e92a0c69160396 SHA512 d3ea2485aa925343230c8217931c013d0aba25a52888c080aa2ba0daf7930b3c7dfe3947ab1e84aa785480586c6d8ebf52f2b4825017795d07d18cb9aff65474 WHIRLPOOL c90088d15847499d93bf5bb82b348ce73667e0e017d7898531d5672c27dd317493c9d0ae65ff62e8b1b6c4e77e10dd1d54a9a0115a63bc6ee7bb26a683ae1255
 EBUILD gdb-7.5.1.ebuild 5228 SHA256 dc67cd399c506d3fe078e737936258fb468b2e12703d01870cc2ffc11a1648dc SHA512 3b181cd807f01b1cabc82d3e269cc7ab4568c2a44e54545a959250e48f9973dbfb2d6939631897808a72b1aff721006f44086cff5bb5974fc7a79bb026ec646c WHIRLPOOL 47f9b7c30bfb01b6dab7c76d60e505ffd3a616c5d886d74f3be7732001bb61f51f1f97ef9358b3b20c377509e2de69f87fdf35c82d7393c8added04d13a5aea8
 EBUILD gdb-7.5.ebuild 5210 SHA256 a1c54a09ffb28e92290b51af07206e7f40c0273c90bc2beebf5339776dbd829c SHA512 50ce9fb465d102f0d66c5d7fa45c5242b2d6cac646446100c0f71f7d467d50d72a32850ab949f77d9af1182f8c9a54b3a845c4176e4fbf792fe968d22588d403 WHIRLPOOL d0f83a7b75220acd853d5f868e66edc39af76363f778abf05ae31206f84238627e9c3c028ba7ec9c069808827b1991ac3810da1cba70fabd45e0399eec160321
-EBUILD gdb-7.6.1.ebuild 5693 SHA256 d3a668542d46a85531b4676b2ba6c06218748a0f04f8237b58ef656ca76e4989 SHA512 7b10b7fb0e1c329257769980d29d348e7b8490b6fcebc8a8a178fb8cb42699a65f6fbc5300a09716426889404e510c206dbd1a09db20b623dc1cfb02a595c4a7 WHIRLPOOL 89c83e9d72f1623100a7c5fadeb5addd51f803117a50fcb4835a3d1e2a96b0a787e5ed53ced9cc981147af7c0f49b015057c5ed5decaa39160c9210b29e323e4
+EBUILD gdb-7.6.1.ebuild 5692 SHA256 d6ed4f13b3b6275a6329ef71cc69980849b6cec8801073822da28551e72d43e5 SHA512 db87ad5a90930c0e5bf4599d388bc00c8a3fb17fdf4fe45f5d992fd475f5d22b4b519739b440f378738cf5498c7504f27d9f52f08905bd473bdcb653e4154bca WHIRLPOOL e3d446c58be152f93c39267f4f17be0f609d62dcd8c9d89d6e1c08aec9d95677407f7260b15383a6118103beacb72d29d07228123346c381bb23ad6224ce3278
 EBUILD gdb-7.6.ebuild 5230 SHA256 76c28b389df759ff08e41870239b64a8b833211a3f734e214b03baa1df7b87b4 SHA512 1607bf0876f0a5b4dbde6c3be5fa15a1a8229343d382a9c8d89b49948ef2b8bed20de6c9487749d6f28fa35da2ccca6230e55b0519687ed636051482ba319ed7 WHIRLPOOL 392b3afa9c037a42c38835ac2aa37ce7a367da9c30a973aad95ba50145beab52704d2357c451ec3f568cc236f87b0c8e60d2e424086df07133612030b18f0e18
 EBUILD gdb-9999.ebuild 5680 SHA256 65d9a15e4944eebe474585dc2ff6c960decfe3685eee4871f41b3cedeea8320e SHA512 63b20215332dc00b6b26b0cc84c93c9dd09265531f54aa0c7875308806df2f7fc42d2c5adceeed460ca52a41679442acc7342ab7548caeea50ec06c7001d069e WHIRLPOOL e064759f7a71626b9a876b3e0c94115dcb739ab24bd4ed5cf0b76766ddac8aa830a314926572a24c171f91b7f513e420ed39e258e31be22ce4519450ab3e9d1b
-MISC ChangeLog 32411 SHA256 d85a8438d0cc9902e207473c8d0b82b0219f2eb7b0ce471e9e192fdf04a7259f SHA512 852d171f403a50809f31dfa2cdbf4882df97361147d7a9b33c68507f4d107d7babc74275677f14c87b161d5d924fdfe3d584fb87d956ab7b80b8d6ffdcc58fe0 WHIRLPOOL 7bb3075dde6887ee0806b5a7099ae79803e3ce11ffa44b2759358d8a50c22cae39224ca91ce560af910f7f69c56171c7a597859ac53eb1b520bc11e42ef74607
+MISC ChangeLog 32569 SHA256 c75430986e370d5511cea5db4dd061264b5690dab45c401b99093455e7ca80f3 SHA512 52d18b73200638d330418cb1de6551f3e8d54e588ed56e97f76171342a53c5d533fdba7ec8a9f805a8e112caacb0418376508bbb04a11774a597205dfd8a0b04 WHIRLPOOL e4790724da263c4e2723e3ff5ef8066d64cd223471b5ee3ded73c12e2b64f2052fa8e061efb4157d832e0c7a3a505089d1a93da5e46f1eaf3f25dac6bc6356c5
 MISC metadata.xml 552 SHA256 e86791dadf315a7a079e460854bcc4a28d7c69a93694efc85014b325824b81cf SHA512 bb4901b011b63137fb7e359ff657fbe8aa2bd7d36a78be397c163a0bd37486a32bddf4929ab5a2a3b7b7d52f3c2edd69ce18d4bb5e2f56b45d43bb59cb54f686 WHIRLPOOL 214e51279eed4230ed8cba15e42581213428ff06c32ad7832b17c1af6c2eae351a843aae51d78a99486b5bbfea2369faa4aaa4b99cae1ce7a41da5748d8e2211
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (Darwin)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlI1o20ACgkQX3X2B8XHTokDiACfaZdVudAIMCUwDHRV8TNwhiwA
-FZAAmgNN0U2H3du7Fxb6biHm3uKeMTLY
-=04J/
+iQIcBAEBCAAGBQJSR6XyAAoJELEHsLL7fEFWnlwQAMhrIVeP1xKA+jVVKB+wAkwJ
+rmCbteYORvg6d2g3s2ezxyg7tVWO+ctnmCRb+cjGUEa1Yte3RuUdbEdJx0fUEeMv
+t8Iqcv6ruDFJXqsoK7JWlL52s+qfA6KWnb5dlN/EFjUQv9p+W2h4tQcuRJ269E+b
+q4Pvtcgfhw/ea5zURDG81Uw7KaP6huNpUP3roUSi0NtpWEC+7+OqR9WFBAZzCBIB
+CccGaw04O/svA8VU4lhqjot4LVipmiOrX4op0BO1LUhaPkCQOSI1zFecy0weyra9
+k6VZ0ywkuCJGcplGMyOrdBtPtzq2cOgg5lNcaknjB2+nWhE4dT6Mpz6rwYDbaLEY
+Vhf56oPKKqVfpmbNv7k8ZtprL1HRcQjCQT2TeYRAZssCngyB+/DCtsiJNsJp8T9E
+ZIVdonX0xuYIJrfqMKwSRpbYRiMD7rXXaFnwYSKR67ptueHNi39PfuAwmjrhxVz+
+gp2caQ/XPKdU658c/HvUtXgbFpIh+lIObcuGYWF+PaWwRan9FTipk6UdfRXq3sKG
+1nowMI9ShBOA9X9eLbhLItnrssbllvju5eNrAVkG2xHkNxMj2nlp6wRYc0bHCihO
+3IYBFYAh57uVLrAvaqO1k0X4UQW0/Li2b+o76PPZO6R5ChUtIQ2pvR6YtYEkaoi9
+agveRYWb/RJ0N8V/DHmi
+=sgWA
 -----END PGP SIGNATURE-----
