@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/git-annex
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git-annex/ChangeLog,v 1.15 2013/08/28 18:31:44 qnikst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git-annex/ChangeLog,v 1.16 2013/09/29 05:55:25 qnikst Exp $
+
+*git-annex-4.20130815-r1 (29 Sep 2013)
+
+  29 Sep 2013; Alexander Vershilov <qnikst@gentoo.org>
+  +git-annex-4.20130815-r1.ebuild, -git-annex-4.20130815.ebuild:
+  drop android use flag (#484636)
 
   28 Aug 2013; Alexander Vershilov <qnikst@gentoo.org> metadata.xml:
   metadata fix, thanks to specing
