@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/fsharp
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/fsharp/ChangeLog,v 1.2 2013/09/24 13:04:30 cynede Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/fsharp/ChangeLog,v 1.3 2013/09/29 05:32:29 cynede Exp $
+
+*fsharp-3.0.28 (29 Sep 2013)
+
+  29 Sep 2013; Heather Cynede <cynede@gentoo.org> +fsharp-3.0.28.ebuild:
+  fsharp bump
 
   24 Sep 2013; Heather Cynede <cynede@gentoo.org> fsharp-3.0.27.ebuild,
   metadata.xml:
